style: fix flickering

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -1,1 +1,1 @@
-$vis-chooser-header-height: 40px !default;
+$vis-chooser-header-height: 30px !default;
